# tinfoilsub

./: .gitignore  README.md  channels  tinfoilsub.cabal
app/: Main.hs
src/: Web.hs
src/Data/: ConfigParser.hs
src/Web/: Scraper.hs  Server.hs
static/: style.css
