name:                tinfoilsub
version:             0.1.0.0
synopsis:            YouTube subscribtion emulator using scraping
description:         Please see README.md
homepage:            http://github.com/sulami/tinfoilsub
license:             BSD3
license-file:        LICENSE
author:              Robin Schroer
maintainer:          sulami@peerwire.org
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ConfigParser
                     , Web.Scraper
                     , Web.Server
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , scalpel
                     , bytestring
                     , text
                     , transformers
                     , curl
                     , blaze-html
                     , async
  default-language:    Haskell2010

executable tinfoilsub-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tinfoilsub
  default-language:    Haskell2010

test-suite tinfoilsub-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tinfoilsub
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sulami/tinfoilsub
